# Backend

./: .env.example  .gitignore  BD_DISENIO.md  Makefile  README.md  alembic.ini  dev.db  pyproject.toml  requirements.txt  test_auth.py
alembic/: env.py  script.py.mako
alembic/versions/: 1d93332f60c5_mvp_orchestration_models.py  cd5c1f39424c_init_tables.py
app/: config.py  deps.py  main.py
app/infra/: db.py  redis.py  telemetry.py
app/models/: __init__.py  artifact.py  base.py  run.py  trigger.py  workflow.py
app/routers/: ai.py  artifacts.py  catalog.py  runs.py  triggers.py  workflows.py
app/schemas/: workflow.py
app/services/: store.py
app/util/: ids.py  pagination.py
spec/adr/: ADR-0001-api-first.md  ADR-0002-engine-patterns.md
spec/jsonschema/node_catalog/: http.request.schema.json  logic.switch.schema.json
spec/openapi/: openapi.yaml
spec/policies/: authz-rbac.md  error-codes.md  events.md  idempotency.md  pagination.md
src/: __init__.py  converters.py  ia_client.py  main.py  models.py  repository.py
src/ia/: __init__.py  commands.py  factory.py  handlers.py  observers.py  providers.py  services.py
tests/: conftest.py  test_auth.py  test_auth_proxy.py  test_endpoints_e2e_sqlmodel.py  test_ia.py  test_ia_client.py  test_ia_estimate.py  test_ia_fix.py  test_repo_sqlmodel_unit.py  test_workflows.py
tests/api/: test_catalog.py  test_runs.py  test_workflows.py
tests/contracts/: test_openapi_examples.py
tests/fixtures/: client.py
tests/integration/: test_happy_path.sh  worker.py
